# openenv_hack

./: .env.example  .gitignore  EVALUATION_REPORT.md  LICENSE  README.md  WATCHDOG_IMPLEMENTATION_PLAN.md  foresee_grpo.py  generate_case_study.py  generate_episodes.py  generate_plots.py  output1.txt  run_foresee_pipeline.py  test_codenames_mutations_only.py  test_multiturn.py  test_mutations.py  train_grpo.py  train_grpo_mutations.py  turns.txt  watchdog_train_colab.ipynb
watchdog_env/: README.md  __init__.py  client.py  demo_episodes.py  demo_http_episodes.py  error_engine.py  error_engine_legacy.py  error_engine_v2.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  train_adversarial.py  train_user.py
watchdog_env/envs/: __init__.py  avalon.py
watchdog_env/mutations/: __init__.py  generic.py  llm_backend.py  registry.py  watchdog_plugin.py
watchdog_env/outputs/: eval_episodes.json
watchdog_env/plugins/: README.md  __init__.py  base.py  registry.py
watchdog_env/plugins/avalon/: __init__.py  avalon_config.py  avalon_game.py  avalon_models.py  avalon_plugin.py  llm.py
watchdog_env/plugins/cicero/: __init__.py  cicero_config.py  cicero_plugin.py
watchdog_env/plugins/codenames/: __init__.py  agents.py  board_generator.py  codenames_config.py  codenames_plugin.py  game_runner.py  game_state.py  word_interactions.py
watchdog_env/plugins/tests/: __init__.py  test_avalon_plugin.py  test_base_and_registry.py  test_cicero_context.py  test_cicero_mutations.py  (+5 more)
watchdog_env/server/: Dockerfile  __init__.py  app.py  watchdog_environment.py
(+3 files in other folders)
